TAG: qcreports_db-6-0-0-24
DATE: 09/28/2015
STAFF: lec
CHANGES: TR12070
1) mgd/VOC_InvalidProperties.py

TAG: qcreports_db-6-0-0-23
DATE: 09/24/2015
STAFF: lec
CHANGES: TR12146
1) mgd/GXD_EMAPS_MappingChecks.sql

TAG: qcreports_db-6-0-0-22
TAG: qcreports_db-6-0-0-21
DATE: 09/22/2015, 09/23/2015
STAFF: lec
CHANGES: TR12070
1) mgd/VOC_InvalidProperties.py

TAG: qcreports_db-6-0-0-20
DATE: 09/21/2015
STAFF: lnh 
CHANGES: TR12143
1) mgd/GO_EvidenceProperty.py

TAG: qcreports_db-6-0-0-19
DATE: 09/21/2015
STAFF: lec
CHANGES: TR12070
1) mgd/VOC_InvalidProperties.py

TAG: qcreports_db-6-0-0-18
TAG: qcreports_db-6-0-0-17
DATE: 09/09/2015
STAFF: lec
CHANGES: TR12070
1) mgd/VOC_InvalidProperties.py

TAG: qcreports_db-6-0-0-16
DATE: 08/31/2015
STAFF: sc
CHANGES: TR12108
1) QTL_Triage.py

TAG: qcreports_db-6-0-0-15
DATE: 08/25/2015
STAFF: lec
CHANGES:
1) TR112083/10592/authors/title

TAG: qcreports_db-6-0-0-14
TAG: qcreports_db-6-0-0-13
TAG: qcreports_db-6-0-0-12
DATE: 08/19/2015
STAFF: lec
CHANGES: 
1) TR11963/mgd/GXD_Images.py : Dis Model Mech

TAG: qcreports_db-6-0-0-11
DATE: 08/17/2015
STAFF: lec
CHANGES: 
1) mgd/GXD_Images.py : PLoS One issue

TAG: qcreports_db-6-0-0-10
TAG: qcreports_db-6-0-0-9
DATE: 08/12/2015
STAFF: lec
CHANGES: 
1) fixed jfilescanner link
mgd/MRK_GOIEA.py
mgd/MRK_GORCA.py
mgd/MRK_NoGO.py

TAG: qcreports_db-6-0-0-8
DATE: 08/10/2015
STAFF: lec
CHANGES: TR11979
1) mgd/BIB_RefsToIndex.py

TAG: qcreports_db-6-0-0-7
TAG: qcreports_db-6-0-0-6
DATE: 08/06/2015
STAFF: sc
CHANGES: TR12082
1) added weekly/QTL_Triage.py
2) added above to index page

TAG: qcreports_db-6-0-0-5
DATE: 07/28/2015
STAFF: lec
CHANGES: 
1) TR11750/postgres

TAG: qcreports_db-6-0-0-4
DATE: 07/27/2015
STAFF: lnh
CHANGES:
1) mgd/GO_EvidenceProperty.py: Added a SERVER_TYPE check - only send email when on prod
2) Configuration.default: Added new flag SERVER_TYPE=INSTALL_TYPE

TAG: qcreports_db-6-0-0-3
TAG: qcreports_db-6-0-0-2
TAG: qcreports_db-6-0-0-1
DATE: 07/22/2015, 07/23/2015
STAFF: lec