@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-1-1
+DATE: 10/13/2015
+STAFF: lec
+CHANGES: 
+1) TR12153/mgd/RECOMB_SpecNoAge.sql
+
 TAG: qcreports_db-6-0-0-24
 DATE: 09/28/2015
 STAFF: lec
